syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本
import "common.proto";
option go_package = "./pb";  // 指定生成的Go代码在你项目中的导入路径

package pb; // 包名
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";

// 定义 swagger 相关的内容
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "panda-account http doc";
    version: "1.0";
    license: {
      name: "NO.000000001";
    };
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
};


message FileUploadResponse {
  string message = 1;
}

message DownloadFileRequest {
  string file_id = 1;
}


// 定义服务
service PandaAccount {
  rpc SayHello2DemoClient (HelloRequest) returns (HelloResponse) {
    option(google.api.http)= {
      post:"/v1/panda-account/say-hello2demo-grpc_client_wrapper"
      body:"*"
    };
  }

  rpc UploadFile (stream FileChunk) returns (FileUploadResponse) {
    option (google.api.http) = {
      post: "/v1/upload",
      body: "*"
    };
  }

  rpc DownloadFile (DownloadFileRequest) returns (stream FileChunk) {
    option (google.api.http) = {
      get: "/v1/download/{file_id}"
    };
  }

}
